@@ -245,7 +245,7 @@
  bottom:calc((var(--bottom-toolbar-height) + var(--mobile-npbar-height)) - 3.5px);
  width:100vw;
  height:3px !important;
- background-color: rgba(var(--highlight-rgb), 0.3)!important;
+ background-color:var(--pbar-bgnd)!important;
 }
 
 .np-bar-details-mobile {
