@@ -64,6 +64,8 @@
  --sab: env(safe-area-inset-bottom);
  --bottom-nav-pad:max(calc(var(--sab) - 22px), 0px);
  --dialog-opacity:1.0;
+ --pbar-bgnd:rgba(32, 32, 32, 0.15);
+ --pbar-colored-bgnd:rgba(220, 220, 220, 0.3);
 }
 
 /* For old browsers that dont support min() */
@@ -83,6 +85,7 @@
  --album-separator-color:rgba(255, 255, 255, 0.2);
  --pq-current-color:rgba(var(--highlight-rgb),0.25);
  --pq-current-album-color:rgba(var(--highlight-rgb),0.1);
+ --pbar-bgnd:rgba(200, 200, 200, 0.15);
 }
 
 .dragging {
@@ -112,10 +115,6 @@
 .v-slider .primary, .v-progress-linear .primary, .v-progress-circular .primary {
  background-color:var(--primary-color)!important;
  border-color:var(--primary-color)!important;
-}
-
-.v-progress-linear__bar {
- height:unset!important;
 }
 
 .drag-area, .drag-area-left, .drag-area-right {
@@ -160,6 +159,10 @@
 .np-bar .v-progress-linear .primary {
  background-color:var(--bottom-position-slider-color)!important;
  border-color:var(--bottom-position-slider-color)!important;
+}
+
+.no-liveedge .v-progress-linear .v-progress-linear__background {
+ background-color:transparent!important;
 }
 
 .v-input__control .accent--text {
@@ -1594,7 +1597,7 @@ div.v-rating i.primary--text, div.v-rating i.accent--text {
  height:5px !important;
  border:none !important;
  overflow:hidden;
- background-color: rgba(var(--highlight-rgb), 0.3)!important;
+ background-color:var(--pbar-bgnd)!important;
 }
 
 .np-slider .v-progress-linear__bar__determinate {
