@@ -82,8 +82,8 @@ function nowplayingOnPlayerStatus(view, playerStatus) {
     if (playerStatus.current.live_edge!=view.playerStatus.current.liveEdge) {
         view.playerStatus.current.liveEdge = playerStatus.current.live_edge;
 
-        let pc = view.playerStatus.current && undefined!=view.playerStatus.current.duration &&
-        view.playerStatus.current.duration>0 ? 100*Math.floor(view.playerStatus.current.liveEdge*1000/view.playerStatus.current.duration)/1000 : 100.0;
+        let pc = view.playerStatus.current && undefined!=view.playerStatus.current.duration && view.playerStatus.current.liveEdge && view.playerStatus.current.duration>0
+                 ? 100*Math.floor(view.playerStatus.current.liveEdge*1000/view.playerStatus.current.duration)/1000 : 100.0;
 
         if (pc!=view.playerStatus.current.bufpc) {
             view.playerStatus.current.bufpc = pc;
